--- a/shell/CMakeLists.txt
+++ b/shell/CMakeLists.txt
@@ -57,7 +57,7 @@ set (plasma_shell_SRCS
     ${scripting_SRC}
 )
 
-if (TARGET KUserFeedbackCoreQt6)
+if (TARGET KF6::UserFeedbackCore)
     set(plasma_shell_SRCS
         ${plasma_shell_SRCS}
         userfeedback.cpp
@@ -109,8 +109,8 @@ target_link_libraries(plasmashell
  LayerShellQt::Interface
 )
 target_link_libraries(plasmashell KF6::ConfigQml)
-if (TARGET KUserFeedbackCoreQt6)
-    target_link_libraries(plasmashell KUserFeedbackCoreQt6)
+if (TARGET KF6::UserFeedbackCore)
+    target_link_libraries(plasmashell KF6::UserFeedbackCore)
     target_compile_definitions(plasmashell PRIVATE -DWITH_KUSERFEEDBACKCORE)
 endif()
 
