Use libxcrypt for salt generation
Many distros have already completed their migration to yescrypt for password hashes. For these distros it is desirable that the user KCM follows suit and generates yescrypt hashes for accountsservice by default.

The easiest way to handle this is to check to see if we're building with at least libxcrypt 4. This version is guaranteed to have the `crypt_gensalt` symbol which will typically default to yescrypt on those distros. The `crypt` function will detect that we're passing in a yescrypt prefix and generate the correct hash. This is functionally identical to how DEs that use libaccountsservice work.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -190,6 +190,14 @@ if(PipeWire_FOUND)
   find_package(Libdrm REQUIRED)
 endif()
 
+# FreeBSD systems might have libxcrypt but their shadow equivalent doesn't use it
+if(CMAKE_SYSTEM_NAME MATCHES "Linux")
+    pkg_check_modules(libxcrypt libxcrypt>=4)
+    if(libxcrypt_FOUND)
+        set(HAVE_CRYPT_GENSALT true)
+    endif()
+endif()
+
 find_package(Qt6WaylandClient COMPONENTS Private)
 find_package(PlasmaWaylandProtocols 1.6 REQUIRED)
 find_package(Wayland REQUIRED COMPONENTS Client Server) # Server is used in autotests
