--- a/shell/tests/CMakeLists.txt
+++ b/shell/tests/CMakeLists.txt
@@ -5,7 +5,6 @@ set(screenpoolmanualtest_SRCS
     screenpooltest.cpp
     ../screenpool.cpp
     ${CMAKE_CURRENT_BINARY_DIR}/../screenpool-debug.cpp
-    ../outputorderwatcher.cpp
     )
 add_executable(screenpoolmanualtest)
 qt6_generate_wayland_protocol_client_sources(screenpoolmanualtest FILES
@@ -22,6 +21,7 @@ target_link_libraries(screenpoolmanualtest
             KF6::WindowSystem
             Plasma::KWaylandClient
             Wayland::Client
+            PW::KWorkspace
                         )
 if(HAVE_X11)
     target_link_libraries(screenpoolmanualtest XCB::XCB XCB::RANDR)
