Adapt to plasma-framework targets being renamed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,9 +49,9 @@ find_package(KF6 ${KF6_MIN_VERSION} REQUIRED COMPONENTS
                     CoreAddons KIO Prison Package
                     GuiAddons Archive ItemModels IconThemes UnitConversion TextEditor StatusNotifierItem
                     OPTIONAL_COMPONENTS DocTools)
-find_package(KF6 ${PROJECT_VERSION} REQUIRED COMPONENTS
-                    Plasma PlasmaQuick Plasma5Support)
-
+find_package(KF6 ${PROJECT_VERSION} REQUIRED COMPONENTS Plasma5Support)
+find_package(Plasma ${PROJECT_VERSION} REQUIRED)
+find_package(PlasmaQuick ${PROJECT_VERSION} REQUIRED)
 find_package(KWayland ${PROJECT_VERSION} REQUIRED)
 find_package(PlasmaActivities ${PROJECT_VERSION} REQUIRED)
 find_package(PlasmaActivitiesStats ${PROJECT_VERSION} REQUIRED)
