--- a/applets/systemtray/container/CMakeLists.txt
+++ b/applets/systemtray/container/CMakeLists.txt
@@ -19,7 +19,7 @@ kcoreaddons_add_plugin(org.kde.plasma.systemtray SOURCES ${systemtraycontainer_S
 target_link_libraries(org.kde.plasma.systemtray
                       Qt::Gui
                       Qt::Quick
-                      KF6::Plasma
-                      KF6::PlasmaQuick
+                      Plasma::Plasma
+                      Plasma::PlasmaQuick
                       KF6::XmlGui
                       KF6::I18n)
