--- a/containmentactions/contextmenu/CMakeLists.txt
+++ b/containmentactions/contextmenu/CMakeLists.txt
@@ -24,7 +24,7 @@ target_link_libraries(plasma_containmentactions_contextmenu
                       Plasma::Activities
                       KF6::I18n
                       KF6::GlobalAccel
-                      KF6::Plasma
+                      Plasma::Plasma
                       KF6::KIOCore
                       KF6::KIOGui
                       PW::KWorkspace)
