--- a/dataengines/dict/CMakeLists.txt
+++ b/dataengines/dict/CMakeLists.txt
@@ -8,7 +8,7 @@ set(dict_engine_SRCS
 add_library(plasma_engine_dict MODULE ${dict_engine_SRCS})
 
 target_link_libraries (plasma_engine_dict
-  KF6::Plasma
+  Plasma::Plasma
   KF6::Plasma5Support
   KF6::Service
   KF6::I18n
