--- a/dataengines/favicons/CMakeLists.txt
+++ b/dataengines/favicons/CMakeLists.txt
@@ -7,7 +7,7 @@ set(favicons_engine_SRCS
 
 kcoreaddons_add_plugin(plasma_engine_favicons SOURCES ${favicons_engine_SRCS} INSTALL_NAMESPACE plasma5support/dataengine)
 target_link_libraries(plasma_engine_favicons
-    KF6::Plasma
+    Plasma::Plasma
     KF6::Plasma5Support
     KF6::KIOCore
     Qt::Gui
