--- a/runners/powerdevil/CMakeLists.txt
+++ b/runners/powerdevil/CMakeLists.txt
@@ -3,4 +3,4 @@
 add_definitions(-DTRANSLATION_DOMAIN=\"plasma_runner_powerdevil\")
 
 kcoreaddons_add_plugin(krunner_powerdevil SOURCES PowerDevilRunner.h PowerDevilRunner.cpp INSTALL_NAMESPACE "kf6/krunner")
-target_link_libraries(krunner_powerdevil Qt::DBus KF6::ConfigCore KF6::I18n KF6::Plasma KF6::Runner PW::KWorkspace)
+target_link_libraries(krunner_powerdevil Qt::DBus KF6::ConfigCore KF6::I18n Plasma::Plasma KF6::Runner PW::KWorkspace)
