--- a/dataengines/executable/CMakeLists.txt
+++ b/dataengines/executable/CMakeLists.txt
@@ -6,7 +6,7 @@ set(executable_engine_SRCS
 kcoreaddons_add_plugin(plasma_engine_executable SOURCES ${executable_engine_SRCS} INSTALL_NAMESPACE plasma5support/dataengine)
 
 target_link_libraries(plasma_engine_executable
-    KF6::Plasma
+    Plasma::Plasma
     KF6::Plasma5Support
     KF6::Service
     KF6::CoreAddons
