--- a/dataengines/filebrowser/CMakeLists.txt
+++ b/dataengines/filebrowser/CMakeLists.txt
@@ -5,7 +5,7 @@ set(filebrowser_engine_SRCS
 
 kcoreaddons_add_plugin(plasma_engine_filebrowser SOURCES ${filebrowser_engine_SRCS} INSTALL_NAMESPACE plasma5support/dataengine)
 target_link_libraries(plasma_engine_filebrowser
-    KF6::Plasma
+    Plasma::Plasma
     KF6::Plasma5Support
     KF6::Service
     KF6::KIOCore
