--- a/dataengines/keystate/CMakeLists.txt
+++ b/dataengines/keystate/CMakeLists.txt
@@ -11,7 +11,7 @@ kcoreaddons_add_plugin(plasma_engine_keystate SOURCES ${keystate_engine_SRCS} IN
 
 target_link_libraries(plasma_engine_keystate
     KF6::GuiAddons
-    KF6::Plasma
+    Plasma::Plasma
     KF6::Plasma5Support
     KF6::Service
     KF6::KIOCore
