--- a/dataengines/powermanagement/CMakeLists.txt
+++ b/dataengines/powermanagement/CMakeLists.txt
@@ -16,7 +16,7 @@ kcoreaddons_add_plugin(plasma_engine_powermanagement SOURCES ${powermanagement_e
 
 target_link_libraries(plasma_engine_powermanagement
     KF6::Solid
-    KF6::Plasma
+    Plasma::Plasma
     KF6::Plasma5Support
     KF6::IdleTime
     KF6::CoreAddons
