--- a/wallpapers/image/plugin/CMakeLists.txt
+++ b/wallpapers/image/plugin/CMakeLists.txt
@@ -36,7 +36,7 @@ target_link_libraries(plasma_wallpaper_imageplugin_static
     Qt::Core
     Qt::Quick
     Qt::Qml
-    KF6::Plasma
+    Plasma::Plasma
     KF6::I18n
     KF6::JobWidgets
     KF6::KIOCore
