Add KCM Wallpaper
Change the structure of wallpaper configurations to allow them to be loaded outside of plasma process.
Now the configuration must be passed through `wallpaperConfiguration`, the `configDialog` corresponds to the configDialog,  `screen` for the screen.

--- a/kcms/CMakeLists.txt
+++ b/kcms/CMakeLists.txt
@@ -25,3 +25,4 @@ add_subdirectory(notifications)
 add_subdirectory(nightcolor)
 add_subdirectory(users)
 add_subdirectory(soundtheme)
+add_subdirectory(wallpaper)
