KRunner: Launch service in daemon mode
This prevents KRunner from showing up on launch, and immediately hiding
due to receiving an activation request.

BUG: 477365

--- a/krunner/plasma-krunner.service.in
+++ b/krunner/plasma-krunner.service.in
@@ -3,7 +3,7 @@ Description=KRunner
 PartOf=graphical-session.target
 
 [Service]
-ExecStart=@CMAKE_INSTALL_FULL_BINDIR@/krunner
+ExecStart=@CMAKE_INSTALL_FULL_BINDIR@/krunner --daemon
 Type=dbus
 BusName=org.kde.krunner
 TimeoutSec=5sec
