krunner: Add zsh completion
Completes all non-generic-Qt options listed in --help output.

List of runners is generated dynamically, and it's fast enough to not
require caching tricks.

--- a/krunner/CMakeLists.txt
+++ b/krunner/CMakeLists.txt
@@ -51,3 +51,4 @@ ecm_install_configured_files(
     DESTINATION ${KDE_INSTALL_SYSTEMDUSERUNITDIR}
 )
 
+install(FILES completions/krunner.zsh RENAME _krunner DESTINATION ${KDE_INSTALL_ZSHAUTOCOMPLETEDIR})
