appiumtests: Introduce a generic plasmoidtest script
A bunch of the appiumtests are simple smoke tests that just check if a
plasmoid loads by trying to find a certain element by name. We can do a
generic version of this by passing the plasmoid ID and the name to find
on the command line, allowing us to drop a bunch of duplicated code.

This adds the generic script and a CMake function to make use of it.

--- a/appiumtests/CMakeLists.txt
+++ b/appiumtests/CMakeLists.txt
@@ -16,6 +16,15 @@ if(NOT SeleniumWebDriverATSPI_FOUND AND NOT DEFINED ENV{KDECI_BUILD})
     return()
 endif()
 
+function(plasmoid_test ARG_PLASMOID)
+    cmake_parse_arguments(PARSE_ARGV 1 ARG "" "" "FIND_NAMES")
+    add_test(
+        NAME "test_${ARG_PLASMOID}"
+        COMMAND selenium-webdriver-at-spi-run ${CMAKE_CURRENT_SOURCE_DIR}/plasmoidtest.py --plasmoid "${ARG_PLASMOID}" --find-names "$<JOIN:${ARG_FIND_NAMES}, >"
+    )
+    set_tests_properties("test_${ARG_PLASMOID}" PROPERTIES TIMEOUT 120)
+endfunction()
+
 add_subdirectory(inputsynth)
 
 add_test(
